Fixes for bugs with num updown component and overlapping labels

--- a/style/style.less
+++ b/style/style.less
@@ -34,6 +34,6 @@
   fill: #aaa;
 }
 
-.divTableHeatMap {
-  overflow: auto
-}
+// .divTableHeatMap {
+//   overflow: visible;
+// }
